--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= image_tag('logo1.png', alt: 'Logo de l\'application') %>
+<%= link_to 'Se connecter', user_session_path %>
+<%= link_to "s'inscrire", new_user_registration_path %>
