user sign in set up

--- a/app/views/onboardings/edit.html.erb
+++ b/app/views/onboardings/edit.html.erb
@@ -1,19 +1,11 @@
-<%= form_with model: @user do |f| %>
-  <%= f.label :first_name %>
-  <%= f.text_feild :first_name %>
-  <%= f.label :last_name %>
-  <%= f.text_feild :last_name %>
-  <%= f.label :sexe %>
-  <%= f.text_feild :sexe %>
-  <%= f.label :size %>
-  <%= f.text_feild :size %>
-  <%= f.label :goal %>
-  <%= f.text_feild :goal %>
-  <%= f.label :training %>
-  <%= f.text_feild :training %>
-  <%= f.label :body_fat %>
-  <%= f.text_feild :body_fat %>
-  <%= f.label :weight %>
-  <%= f.text_feild :weight %>
-  <%= f.submit  %>
+<%= simple_form_for @user, url: onboardings_path, method: :patch do |f| %>
+  <%= f.input :first_name %>
+  <%= f.input :last_name %>
+  <%= f.input :sexe %>
+  <%= f.input :size %>
+  <%= f.input :goal %>
+  <%= f.input :training %>
+  <%= f.input :body_fat %>
+  <%= f.input :weight %>
+  <%= f.submit %>
 <% end %>
