--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,12 @@
 <%= image_tag('logo1.png', alt: 'Logo de l\'application') %>
-<%= link_to 'Se connecter', user_session_path %>
-<%= link_to "s'inscrire", new_user_registration_path %>
+
+<% if user_signed_in? %>
+  <%= link_to "Home", "#", class: "nav-link" %>
+  <%= link_to "Messages", "#", class: "nav-link" %>
+  <%= link_to "Action", "#", class: "dropdown-item" %>
+  <%= link_to "Another action", "#", class: "dropdown-item" %>
+  <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
+<% else %>
+  <%= link_to "Se connecter", new_user_session_path %>
+  <%= link_to "S'inscrire", new_user_registration_path %>
+<% end %>
