--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+.home-page {
+  height: 932px;
+  width: 430px;
+  background-color: #1D3D57;
+}
+
+.logo-home {
+  width: 430px;
+}
+
+.btn-home {
+  background-color: white;
+}
+
+.connection {
+  color: red;
+}
