--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,8 @@
     <% if user_signed_in? %>
       <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
     <% else %>
-      <div class="connection">
-        <%= link_to "Se connecter", new_user_session_path %>
-      </div>
-      <div class="inscription">
-        <%= link_to "S'inscrire", new_user_registration_path %>
-      </div>
+      <%= link_to "Se connecter", new_user_session_path, class:"connection"%>
+      <%= link_to "S'inscrire", new_user_registration_path, class:"inscription" %>
     <% end %>
   </div>
 </div>
