--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,20 +1,42 @@
 // Specific CSS for your home-page
 .home-page {
-  height: 932px;
-  width: 430px;
+  height: 100vh;
   background-color: #1D3D57;
 }
 
 .logo-home {
-  width: 430px;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .btn-home {
-  background-color: white;
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.connection {
-  color: red;
+.slogan {
+  color: white;
+  font-weight: bold;
+  padding: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.btn-white {
+  text-align: center;
+  color: black;
   text-decoration: none;
-  margin: 10px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px grey;
+  font-weight: bold;
+  margin: 20px;
+  width: 60%;
 }
