--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,11 +1,13 @@
 <div class="dashboard-page">
 
   <div class="search">
-    
+
   </div>
 
   <div class="dashboard-body">
+  <%= current_user.calorie_counter %>
   </div>
+
 
   <div class="navbar_dashboard_bot">
     <nav class="navbar-dashboard">
