--- a/app/views/onboardings/edit.html.erb
+++ b/app/views/onboardings/edit.html.erb
@@ -9,6 +9,7 @@
       <%= f.input :sexe %>
       <%= f.input :size %>
       <%= f.input :goal %>
+      <%= f.input :year %>
       <%= f.input :training %>
       <%= f.input :body_fat %>
       <%= f.input :weight %>
@@ -24,6 +25,7 @@
         <p>Sexe: <%= @user.sexe %></p>
         <p>Size: <%= @user.size %></p>
         <p>Goal: <%= @user.goal %></p>
+        <p>year: <%= @user.year %></p>
         <p>Training: <%= @user.training %></p>
         <p>body_fat: <%= @user.body_fat %></p>
         <p>weight: <%= @user.weight %></p>
