--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -43,7 +43,7 @@
         <% @daily_meals.each do |daily_meal| %>
           <%= link_to daily_meal_path(daily_meal) do %>
             <%# mettre logo meal %>
-            <p>meals of the day</p>
+            <p>repas du jour</p>
           <% end %>
         <% end %>
       </div>
