--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -48,5 +48,6 @@
         <% end %>
       </div>
     </div>
+    <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item m-5", data: {turbo_method: :delete} %>
   </div>
 </div>
