design home formulaire inscription et connexion

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -60,3 +60,9 @@
   font-size: 16px;
   margin-bottom: 10px;
 }
+
+.home-connection {
+  color: white;
+  text-decoration: none;
+  margin-top: 20px;
+}
