--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="session">
-  <div class="logo-home">
-    <%= image_tag('logo1.png', alt: 'Logo de l\'application') %>
+  <div>
+    <%= image_tag('logo1.png', class:'logo-registration', alt: 'Logo de l\'application') %>
   </div>
 
   <h2 class="log">S'inscrire</h2>
