--- a/app/assets/stylesheets/devise/registrations/_new.scss
+++ b/app/assets/stylesheets/devise/registrations/_new.scss
@@ -1,12 +1,21 @@
 .sessions {
   background-color: #1D3D57;
   height: 100vh;
-  overflow-y: auto; 
+  // overflow-y: auto;
+}
+
+.logo-registration {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .log {
   color: white;
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .btn-sign-up {
@@ -18,10 +27,7 @@
   border-radius: 10px;
   box-shadow: inset 0px 0px 5px grey;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   width: 60%;
-}
-
-.test {
-  color: red;
 }
