--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
     <% if user_signed_in? %>
       <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
     <% else %>
-      <%= link_to "Se connecter", new_user_session_path, class:"btn-white"%>
       <%= link_to "S'inscrire", new_user_registration_path, class:"btn-white" %>
+      <%= link_to "Se connecter", new_user_session_path, class:"home-connection"%>
     <% end %>
   </div>
 
