--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,25 +1,36 @@
-<div class="img-meal">
-  <div class="back">
-    <%= link_to dashboards_path do %>
-      <p>retour</p>
-    <% end %>
-  </div>
-  <div class="informations">
-    <div class="meal-title">
-      <h2><%= @meal.title %></h2>
+<div class="meal-home">
+  <div class="nav-bar">
+    <div class="arrow-back">
+      <%= link_to daily_meals_path do %>
+        <i class="fa-solid fa-arrow-left"></i>
+      <% end %>
     </div>
-    <div class="meal-calorie">
-      <p><strong><%= @meal.calorie %></strong> cal</p>
+    <div class="food">
+      <i class="fa-solid fa-utensils fa-2xl"></i>
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="composition">
-    <h3>Composition</h3>
-    <p><%= @meal.composition %></p>
+
+  <div class="meal-container">
+    <div class="img-meal">
+      <img src="<%= @meal.img %>" alt="<%= @meal.title %>">
+      <div class="informations">
+        <div class="meal-title">
+          <h2><%= @meal.title %></h2>
+        </div>
+        <div class="meal-calories">
+          <p><strong><%= @meal.calorie %></strong> cal</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="composition">
+      <h3>Composition</h3>
+      <p><%= @meal.composition %></p>
+    </div>
+    <div class="description">
+      <h3>Description</h3>
+      <p><%= @meal.description %></p>
+    </div>
   </div>
-  <div class="description">
-    <h3>Description</h3>
-    <p><%= @meal.description %></p>
-  </div>
+
 </div>
