--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,5 @@
 @import "pages/index";
 @import "devise/sessions/index";
 @import "devise/registrations/index";
+@import "daily_meal/index";
+@import "meals/index"
