--- a/app/assets/stylesheets/meals/_show.scss
+++ b/app/assets/stylesheets/meals/_show.scss
@@ -3,6 +3,13 @@
   background-color: #1D3D57;
 }
 
+.nav-bar-meal {
+  background-color: #EBE7D6;
+  position: fixed;
+  width: 100%;
+  padding: 20px;
+}
+
 .meal-container {
   padding: 20px;
 }
