--- a/app/views/daily_meals/index.html.erb
+++ b/app/views/daily_meals/index.html.erb
@@ -1,5 +1,5 @@
-<div class="daily-meal-page">
-  <div class="nav-bar">
+<div class="daily-meal">
+  <div class="nav-bar-daily-meal">
     <div class="arrow-back">
       <%= link_to dashboards_path do %>
         <%# utiliser font anwsome pour la fleche retour %>
@@ -10,9 +10,9 @@
       <i class="fa-solid fa-utensils fa-2xl"></i>
     </div>
   </div>
-  <div class="container">
+  <div class="container-meal">
       <h2>Repas de la journée</h2>
-      <div class="meal_card">
+      <div class="meal-card">
           <% @daily_meal.meals.each do |meal| %>
             <div class="meal row">
               <%= link_to meal_path(meal) do %>
@@ -25,7 +25,6 @@
                 <p><strong><%= meal.calorie %></strong> cal</p>
               </div>
             </div>
-
           <% end %>
       </div>
   </div>
