--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,5 +1,5 @@
 <div class="meal-home">
-  <div class="nav-bar">
+  <div class="nav-bar-meal">
     <div class="arrow-back">
       <%= link_to daily_meals_path do %>
         <i class="fa-solid fa-arrow-left"></i>
