--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,5 @@
 @import "devise/sessions/index";
 @import "devise/registrations/index";
 @import "daily_meal/index";
-@import "meals/index"
+@import "meals/index";
 @import "dashboards/index"
-
