--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,5 +1,5 @@
 <div class="dashboard-page">
-  <div class="container">
+  <div class="container-d">
     <div class="row mt-3 justify-content-between">
 
         <!-- Bouton Calendrier sans couleur d'arrière-plan et icône bleu foncé -->
