--- a/app/assets/stylesheets/dashboards/_show.scss
+++ b/app/assets/stylesheets/dashboards/_show.scss
@@ -57,7 +57,7 @@ body {
   height: 100vh;
 }
 
-.container {
+.container-d {
   display: flex;
   justify-content: space-between;
   align-items: end;
