--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -12,7 +12,7 @@
 
   <div class="meal-container">
     <div class="img-meal">
-      <img src="<%= @meal.img %>" alt="<%= @meal.title %>">
+      <img src="<%= @meal.img %>" class="img-daily-meal" alt="<%= @meal.title %>">
       <div class="informations">
         <div class="meal-title">
           <h2><%= @meal.title %></h2>
