ce qu'il faut garder

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,6 @@
 @import "devise/sessions/index";
 @import "devise/registrations/index";
 @import "daily_meal/index";
-@import "meals/index"
-@import "dashboards/index"
-
+@import "meals/index";
+@import "dashboards/index";
+@import "exercices/index"
