--- a/app/assets/stylesheets/meals/_show.scss
+++ b/app/assets/stylesheets/meals/_show.scss
@@ -7,10 +7,15 @@
   padding: 20px;
 }
 
-.img-meal {
+.contenu-meal {
   padding-top: 100px;
   padding-bottom: 20px;
   border-bottom: 2px solid #EBE7D6;
+}
+
+.img-meal {
+  border-radius: 10px;
+  width: 400px;
 }
 
 h2, h3 {
