--- a/app/assets/stylesheets/daily_meal/_index.scss
+++ b/app/assets/stylesheets/daily_meal/_index.scss
@@ -1,4 +1,4 @@
-.nav-bar {
+.nav-bar-daily-meal {
   background-color: #EBE7D6;
   position: fixed;
   width: 100%;
@@ -20,11 +20,13 @@ i {
 }
 }
 
-.container {
+.container-daily-meal {
   padding-top: 80px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-img {
+.img-daily-meal {
   width: 100%;
   height: 200px;
   border-radius: 10px;
