--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -40,7 +40,7 @@
       <%= link_to profils_path, class: "nav-item" do %>
         <i class="bi bi-person"><i class="fa-solid fa-user fa-2xl"></i></i>
       <% end %>
-      <%= link_to daily_meals_path, class: "nav-item" do %>
+      <%= link_to meals_path, class: "nav-item" do %>
         <i class="bi bi-person"><i class="fa-solid fa-drumstick-bite fa-2xl"></i></i>
       <% end %>
     </div>
