--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,5 +1,5 @@
 <div class="meal-home">
-  <div class="nav-bar-meal">
+  <div class="nav-bar-daily-meal">
     <div class="arrow-back">
       <%= link_to daily_meals_path do %>
         <i class="fa-solid fa-arrow-left"></i>
@@ -9,10 +9,9 @@
       <i class="fa-solid fa-utensils fa-2xl"></i>
     </div>
   </div>
-
   <div class="meal-container">
-    <div class="img-meal">
-      <img src="<%= @meal.img %>" class="img-daily-meal" alt="<%= @meal.title %>">
+    <div class="contenu-meal">
+      <img src="<%= @meal.img %>" class="img-meal" alt="<%= @meal.title %>">
       <div class="informations">
         <div class="meal-title">
           <h2><%= @meal.title %></h2>
@@ -22,7 +21,6 @@
         </div>
       </div>
     </div>
-
     <div class="composition">
       <h3>Composition</h3>
       <p><%= @meal.composition %></p>
@@ -32,5 +30,4 @@
       <p><%= @meal.description %></p>
     </div>
   </div>
-
 </div>
