front exercices show

--- a/app/assets/stylesheets/exercices/_show.scss
+++ b/app/assets/stylesheets/exercices/_show.scss
@@ -13,3 +13,21 @@ i {
   color: #1D3D57;
 }
 }
+
+.exercice-page {
+  height: 100vh;
+  background-color: #1D3D57;
+}
+
+.exercice {
+  padding-top: 90px;
+}
+
+.exercice-text {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.exercice-title, h4{
+  color: #EBE7D6;
+}
