--- a/app/views/exercices/show.html.erb
+++ b/app/views/exercices/show.html.erb
@@ -1,7 +1,7 @@
-<div class="exercice-page custom-background">
+<div class="exercice-page">
   <div class="nav-bar-exercices">
     <div class="arrow-back">
-      <%= link_to dashboards_path do %>
+      <%= link_to exercices_path do %>
         <i class="fa-solid fa-arrow-left fa-lg"></i>
       <% end %>
     </div>
@@ -15,7 +15,9 @@
       </div>
     </div>
     <div class="exercice-text">
-      <p><%= @exercice.title %></p>
+      <div class="exercice-title">
+        <h4><%= @exercice.title %></h4>
+        <h5><strong><%= @exercice.category %></strong></h5>
       <p><%= @exercice.description %></p>
     </div>
   </div>
