derniere modificetion du front des meals et de daily meal

--- a/app/assets/stylesheets/meals/_show.scss
+++ b/app/assets/stylesheets/meals/_show.scss
@@ -14,12 +14,16 @@
 
 .img-meal {
   border-radius: 10px;
-  width: 400px;
+  width: 390px;
 }
 
 h2, h3 {
   font-weight: bold;
   color: #EBE7D6;
+}
+p {
+  color: #EBE7D6;
+
 }
 .informations {
   display: flex;
@@ -30,7 +34,7 @@ h2, h3 {
   text-align: center;
   background-color: #FF6E41;
   border-radius: 50px;
-  width: 75px;
+  width: 70px;
   height: 60px;
   padding-top: 5px;
   display: flex;
