--- a/app/assets/stylesheets/daily_meal/_index.scss
+++ b/app/assets/stylesheets/daily_meal/_index.scss
@@ -25,12 +25,13 @@ i {
 }
 
 .container-daily-meal {
-  padding-top: 80px;
+  padding-top: 85px;
   padding-left: 10px;
   padding-right: 10px;
 }
 
 .img-daily-meal {
+  padding: 0;
   width: 100%;
   height: 200px;
   border-radius: 10px;
@@ -65,7 +66,7 @@ h2 {
 }
 
 .title {
-  padding-top: 10px;
+  padding-top: 20px;
   text-decoration: none;
 }
 
