--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,49 +1,47 @@
 <div class="dashboard-page">
   <div class="container-d">
     <div class="row mt-3 justify-content-between">
-
-        <!-- Bouton Calendrier sans couleur d'arrière-plan et icône bleu foncé -->
-        <button type="button" class="calendar btn btn-clear">
-          <i class="bi bi-calendar icon-dark-blue"></i>
-          <i class="fa-solid fa-calendar-days fa-2xl icon-dark-blue"></i>
-        </button>
-
+      <!-- Bouton Calendrier sans couleur d'arrière-plan et icône bleu foncé -->
+      <button type="button" class="calendar btn btn-clear">
+        <i class="bi bi-calendar icon-dark-blue"></i>
+        <i class="fa-solid fa-calendar-days fa-3x icon-dark-blue"></i>
+      </button>
     </div>
 
-      <!-- Bouton Loupe sans couleur d'arrière-plan et icône bleu foncé -->
-      <button type="button" class="btn btn-clear">
-        <i class="bi bi-search icon-dark-blue"></i>
-        <i class="fa-solid fa-magnifying-glass fa-2xl icon-dark-blue"></i>
-      </button>
 
+    <button type="button" class="btn btn-clear">
+      <i class="bi bi-search icon-dark-blue"></i>
+      <i class="fa-solid fa-magnifying-glass fa-3x icon-dark-blue"></i>
+    </button>
   </div>
 
-    <div class="row justify-content-center align-items-center" style="height: 70vh;">
-      <div class="col text-center">
-        <!-- Bonhomme au centre -->
-        <%= image_tag('unpeumuscle.png', alt: 'bonhomme', class: "img-fluid", style: "max-width: 400px; max-height: 600px;") %>
-        <div class="progress mt-3" style="margin: auto; width: 80%; height: 40px;">
-          <!-- Barre de progression -->
-          <div class="progress-bar" role="progressbar" style="width: <%= current_user.calorie_counter %>%;" aria-valuenow="<%= current_user.calorie_counter %>" aria-valuemin="0" aria-valuemax="100"><%= current_user.calorie_counter %> kcal</div>
-        </div>
-        <p class="mt-2">Calories: <%= current_user.calorie_counter %> kcal</p>
-        <!-- Bouton Entraînement -->
-        <button type="button" class="btn mt-5" style="background-color: #FF6E41;">Entraînement fait</button>
+  <div class="row justify-content-center align-items-center" style="height: 70vh;">
+    <div data-controller="image-switch" class="col text-center">
+
+      <%= image_tag('unpeumuscle.png', alt: 'bonhomme', class: "img-fluid", data: { image_switch_target: "image" }, style: "max-width: 400px; max-height: 600px;") %>
+
+      <div class="progress mt-3" style="margin: auto; width: 80%; height: 40px;">
+
+        <div class="progress-bar" role="progressbar" style="width: <%= current_user.calorie_counter %>%;" aria-valuenow="<%= current_user.calorie_counter %>" aria-valuemin="0" aria-valuemax="100"><%= current_user.calorie_counter %> kcal</div>
       </div>
-    </div>
 
-    <!-- Barre de navigation pour Exercices et Profil -->
-    <div class="nav-bar">
-      <%= link_to exercices_path, class: "nav-item" do %>
-        <i class="bi bi-person"><i class="fa-solid fa-dumbbell fa-2xl"></i></i>
-      <% end %>
-      <%= link_to profils_path, class: "nav-item" do %>
-        <i class="bi bi-person"><i class="fa-solid fa-user fa-2xl"></i></i>
-      <% end %>
-      <%= link_to daily_meals_path, class: "nav-item" do %>
-        <i class="bi bi-person"><i class="fa-solid fa-utensils fa-2xl"></i></i>
+      <p class="mt-2">Calories: <%= current_user.calorie_counter %> kcal</p>
 
-      <% end %>
+
+      <button type="button" class="btn mt-5" style="background-color: #FF6E41;" data-action="click->image-switch#switch">Entraînement fait</button>
     </div>
+  </div>
+
+
+  <div class="nav-bar">
+    <%= link_to exercices_path, class: "nav-item" do %>
+      <i class="bi bi-person"><i class="fa-solid fa-dumbbell fa-2xl"></i></i>
+    <% end %>
+    <%= link_to profils_path, class: "nav-item" do %>
+      <i class="bi bi-person"><i class="fa-solid fa-user fa-2xl"></i></i>
+    <% end %>
+    <%= link_to daily_meals_path, class: "nav-item" do %>
+      <i class="bi bi-person"><i class="fa-solid fa-utensils fa-2xl"></i></i>
+    <% end %>
   </div>
 </div>
