--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 @import "daily_meal/index";
 @import "meals/index";
 @import "dashboards/index";
-@import "exercices/index"
+@import "exercices/index";
+@import "profils/index"
